workspaces/service-extensions-workspace/k8s/dxp/deployment.yaml
#@ load("@ytt:data", "data")
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dxp-deployment
  labels:
    app: dxp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dxp
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: dxp
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: dxp
          image: #@ data.values.image
          imagePullPolicy: Never
          resources:
            limits:
              cpu: "4000m"
              memory: "8096Mi"
            initialDelaySeconds: 300
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          ports:
          - containerPort: 8080
          - containerPort: 8000
          - containerPort: 11311
          volumeMounts:
          - name: dxp-persistent-storage
            mountPath: "/opt/liferay/data"
      volumes:
        - name: dxp-persistent-storage
          persistentVolumeClaim:
            claimName: dxp-persistent-volume-claim
